<resources>
    <string name="app_name">Geo hunt</string>

    <string name="action_settings">Settings</string>
    <string name="main_creategameButton">New game</string>
    <string name="main_joingameButton">Join a game</string>
    <string name="main_helpButton">\?</string>
    <string name="title_activity_new_game">Start a new game</string>
    <string name="newgame_passwordEditText">Enter game password</string>
    <string name="newgame_nameEditText">Enter game name</string>
    <string name="newgame_usernameEditText">Enter username</string>
    <string name="newgame_okButtonText">OK</string>
    <string name="newgame_cancelButtonText">Cancel</string>

    <string-array name="gameTyp">
        <item>Alien Hunt</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_join_game">Join a game</string>


    <string name="ERROR_ERR0">ERROR: Something goes wrong.</string>
    <string name="ERROR_ERR1">ERROR: The user with this name is already in game.</string>
    <string name="ERROR_ERR2">ERROR: The game with this name is already exists.</string>
    <string name="ERROR_ERR3">ERROR: The game name or password is incorrect.</string>
    <string name="ERROR_GAME_IS_FULL">The hunters limit is reached.</string>
    <string name="title_activity_end">EndActivity</string>

    <string name="hello_world">Hello world!</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_custom_info_contents">custom_info_contents</string>

    <!-- Info dialog -->
    <string name="dialog_name">"Name: %1$s"</string>
    <string name="dialog_altitude">"Altitude: %1$s"</string>
    <string name="dialog_accuracy">"Accuracy: %1$s"</string>
    <string name="dialog_speed">"Speed: %1$s"</string>
    <string name="map.popupWaitForHunterEnter.message">Waiting for hunters to join the game.</string>
    <string name="map.popupWaitForHunterDistance.message">Waiting for hunters distance will be more then 500m.</string>
</resources>
