<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.games.geofox.NewGameActivity"
    android:background="#fff3f3f3">

    <Spinner
        android:id="@+id/typ"
        android:layout_width="fill_parent"
        android:layout_height="67dp"
        android:gravity="end|right"
        android:entries="@array/gameTyp"
        />

    <EditText
        android:id="@+id/gameName"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:gravity="end|center_vertical"
        android:hint="@string/newgame_nameEditText"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/typ"
        />

    <EditText
        android:id="@+id/gamePassword"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:gravity="end|center_vertical"
        android:hint="@string/newgame_passwordEditText"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:layout_below="@+id/gameName"
     />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:gravity="end|center_vertical"
        android:hint="@string/newgame_usernameEditText"
        android:imeOptions="actionNext"
        android:singleLine="true"
        android:layout_below="@+id/gamePassword" />
<RelativeLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/username"
    android:baselineAligned="false">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/newgame_okButtonText"
        android:id="@+id/okButton"
        android:layout_gravity="end"
        android:onClick="doStartGame"
        android:layout_toLeftOf="@+id/cancelButton" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/newgame_cancelButtonText"
        android:id="@+id/cancelButton"
        android:layout_alignParentRight="true"
        android:layout_gravity="end"
        android:onClick="gotoMainActivity" />
</RelativeLayout>

</RelativeLayout>
