<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#fff3f3f3">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:background="#fff">
        <View
            android:layout_width="fill_parent"
            android:layout_height="50dp">
        </View>

        <Button
            android:id="@+id/imageButton"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/main_creategameButton"
            android:onClick="gotoNewGame"
            android:backgroundTint="#ffffd41e"
            android:text="@string/main_creategameButton"
            android:textColor="@android:color/white"
            android:textSize="@dimen/abc_text_size_display_1_material"
            android:capitalize="words"
            android:textAllCaps="false"
            style ="@style/buttonbig"
            android:clickable="false"
            android:elegantTextHeight="false" />



        <View
            android:layout_width="fill_parent"
            android:layout_height="30dp" >
        </View>

        <Button
            android:id="@+id/imageButton1"
            android:layout_gravity="center_horizontal"
            android:background="#ffffd41e"
            android:text="@string/main_joingameButton"
            android:onClick="gotoJoinGame"
            android:textColor="@android:color/white"
            android:textSize="@dimen/abc_text_size_display_1_material"
            android:capitalize="words"
            android:textAllCaps="false"
            style ="@style/buttonbig"
            />

        <View
            android:layout_width="fill_parent"
            android:layout_height="50dp">
        </View>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3"
            android:layout_gravity="end"
            android:background="#ffffd41e"
            android:text="@string/main_helpButton"
            android:textColor="@android:color/white"
            android:textSize="@dimen/abc_text_size_display_1_material"
            android:capitalize="words"
            android:textAllCaps="false"
            style ="@style/buttonbig"
            />
    </LinearLayout>

</RelativeLayout>
